# learning-pytorch

./: .gitignore  pyproject.toml
lectures/01-pytorch_fundamentals/: 00_fundamentals.ipynb
