[project]
name = "pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.67.1",
    "fastapi>=0.136.3",
    "mlflow>=3.13.0",
    "pandas>=2.3.3",
    "pytest>=9.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.49.0",
]
